<resources>
    <string name="app_name">Go Slim</string>

    <!--Login Pager-->
    <string name="welcome_slogan">欢迎!</string>
    <string name="welcomeToSignIn">请登录</string>
    <string name="username">用户名</string>
    <string name="Password">密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="Login">登录</string>
    <string name="alert_login">用户名或密码不正确!</string>
    <!--Register Pager-->
    <string name="welcome_register">欢迎!\n加入我们</string>
    <string name="welcome_to_sign_up">注册，开始你的减肥之旅~</string>
    <string name="init_data">填写基本信息</string>
    <string name="init_data_info">为您生成专属运动方案和热量摄入推荐</string>
    <string name="new_register">新用户?点击注册!</string>
    <string name="register">注册</string>
    <string name="email">邮箱</string>
    <string name="old_email">旧邮箱:%s</string>
    <string name="new_email">新邮箱</string>
    <string name="slim_home">主页</string>
    <string name="slim_running">运动</string>
    <string name="slim_profile">我</string>
    <string name="searchbar_hint">输入要查询信息的食物</string>
    <string name="Description">Description</string>
    <string name="unit">含量(克)/100克</string>
    <string name="unit_with_str"> 千卡/100克</string>
    <string name="recom_unit_with_str">热量:%s 千卡/100克</string>
    <string name="send">发送</string>
    <string name="enter_the_code">输入验证码</string>
    <string name="base_info">基本信息</string>
    <string name="nutritional_info">营养信息</string>
    <string name="recommend">推荐查询</string>
    <string name="nutriment">营养物</string>
    <string name="food_calories">热量</string>
    <string name="food_fat">脂肪</string>
    <string name="food_protein">蛋白质</string>
    <string name="food_carbohydrate">碳水化合物</string>
    <string name="sport_type">运动分类</string>
    <string name="running">跑步</string>
    <string name="walking">快走</string>
    <string name="riding">骑行</string>
    <string name="last_few_day">近期运动数据</string>
    <string name="allDay">运动数据总览</string>
    <string name="start_exercise">开始运动</string>
    <string name="today_task">今日任务</string>
    <string name="start">开始</string>
    <string name="location">移动到我的位置</string>
    <string name="distance">距离/米</string>
    <string name="month_distance">本月累计运动/公里</string>
    <string name="year_distance">今年累计运动/公里</string>
    <string name="speed">公里/小时</string>
    <string name="calories">大卡</string>
    <string name="month_calories">本月累计消耗/大卡</string>
    <string name="year_calories">今年累计消耗/大卡</string>
    <string name="distance_exam">0</string>
    <string name="speed_exam">0</string>
    <string name="calories_exam">0</string>
    <string name="search_alert">未查询到相关食品</string>
    <string name="all_food">全部食品</string>
    <string name="network_wrong">网络出现错误，请稍后重试~</string>
    <string name="user_height_str">身高:%s(cm)</string>
    <string name="user_weight_str">体重:%s(kg)</string>
    <string name="exercise_result">运动数据</string>
    <string name="weight_change">体重变化</string>
    <string name="update_today_weight">更新今日体重:</string>
    <string name="user_avatar">头像:</string>
    <string name="user_info">个人信息</string>
    <string name="update_user_info">修改信息</string>
    <string name="user_nick_name">用户昵称:</string>
    <string name="old_nickname">旧昵称:</string>
    <string name="new_nickname">新昵称:</string>
    <string name="init_username">用户名:</string>
    <string name="user_email">邮箱:</string>
    <string name="user_height">身高(cm):</string>
    <string name="user_weight">体重(kg):</string>
    <string name="user_age">年龄:</string>
    <string name="user_gender">性别:</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>
    <string name="update_hint_height">输入身高</string>
    <string name="update_height">修改身高</string>
    <string name="update_nickname">修改昵称</string>
    <string name="update_hint_nickname">输入昵称</string>
    <string name="food_info">食品详情</string>
    <string name="save">保存</string>
    <string name="old_height">旧身高(cm):</string>
    <string name="new_height">新身高(cm):</string>
    <string name="new_weight">今日体重(kg):</string>
    <string name="expansion">展开全部</string>
    <string name="folded">收起部分</string>
    <string name="update_email">邮箱修改</string>
    <string name="verify">验证</string>
    <string name="task_type">中强度有氧(21分钟)</string>
    <string name="task_calories">今日应摄入</string>
    <string name="progress">进度:</string>
    <string name="task_progress">%s分钟/%s分钟</string>
    <string name="task_today_calories">%s大卡</string>
    <string name="is_done">是否完成</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="gender">性别:</string>
    <string name="choose">选择</string>
    <string name="exercise_intensity">运动强度:</string>
    <string name="intensity_light">轻度</string>
    <string name="intensity_medium">中度</string>
    <string name="intensity_large">高强度</string>
    <string name="exercise_goal">运动目标:</string>
    <string name="goal_reduce_fat">减脂</string>
    <string name="goal_maintain">维持体重</string>
    <string name="goal_gain_muscle">增肌</string>
    <string name="check_height">身高未选择</string>
    <string name="check_weight">体重未选择</string>
    <string name="check_age">年龄未选择</string>
    <string name="check_nickname">昵称未填写</string>
    <string name="check_gender">性别未选择</string>
    <string name="check_goal">目标未选择</string>
    <string name="task_week">周目标:%s</string>
    <string name="goal_A">减少体脂肪和塑造身体线条</string>
    <string name="goal_B">保持身体健康和体重稳定</string>
    <string name="goal_C">增加肌肉质量和体重</string>
    <string name="goal_D">保持健康、活力和身体功能</string>
    <string name="goal_duration">%s 至 %s</string>
    <string name="goal_type_A">高强度有氧运动和全身性力量训练</string>
    <string name="goal_type_B">多样化的有氧运动和力量训练</string>
    <string name="goal_type_C">重量训练和高蛋白饮食</string>
    <string name="goal_type_D">低冲击性有氧运动和平衡训练</string>
    <string name="task_name_time">%s(%s分钟)</string>
    <string name="task_times">完成%s/%s次</string>
    <string name="task_dietary_advice">饮食建议</string>
    <string name="task_dietary_advice_A">控制饮食热量摄入，增加蛋白质和蔬菜摄入量，减少碳水化合物和脂肪摄入量。</string>
    <string name="task_dietary_advice_B">均衡饮食，增加蔬菜和水果摄入量，限制加工食品和糖的摄入，保持适量的蛋白质和健康脂肪摄入。</string>
    <string name="task_dietary_advice_C">增加高蛋白饮食，每日摄入足够的蛋白质以支持肌肉生长，适量增加碳水化合物和健康脂肪摄入。</string>
    <string name="task_dietary_advice_D">多摄入蔬果、全谷类、蛋白质和健康脂肪，同时限制盐和糖的摄入。确保足够的钙和维生素D，保持骨骼健康。保持水分摄入，采用小而频繁的餐食方式，避免过量饮酒和吸烟。</string>
    <string name="not_done">点击完成</string>
    <string name="alert_no_last_exercise">暂无运动数据</string>
</resources>