<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        tools:context=".Pager.Start.RegisterActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/card_double_spacing"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/card_double_spacing">

            <TextView
                android:id="@+id/logo_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alfa_slab_one"
                android:text="@string/init_data"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:transitionName="logo_text" />

            <TextView
                android:id="@+id/slogan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/antic_slab"
                android:text="@string/init_data_info"
                android:textSize="18sp"
                android:transitionName="logo_slogan" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|start"
                        android:text="@string/user_nick_name"
                        android:textSize="@dimen/text_large" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/nickname"
                        style="?attr/textInputFilledStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/card_single_spacing"
                        app:boxBackgroundColor="@color/white">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/nickname_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            app:counterMaxLength="16" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="center|start"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textSize="@dimen/text_large" />

                        <RadioGroup
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checkedButton="@+id/enabled_selected"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/gender_male"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender_male" />

                            <RadioButton
                                android:id="@+id/gender_female"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/gender_female" />
                        </RadioGroup>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start"
                            android:text="@string/user_age"
                            android:textSize="@dimen/text_large" />

                        <Button
                            android:id="@+id/age_choose"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/card_single_spacing"
                            android:text="@string/choose"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_single" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start"
                            android:text="@string/user_weight"
                            android:textSize="@dimen/text_large" />

                        <Button
                            android:id="@+id/weight_choose"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/card_single_spacing"
                            android:text="@string/choose"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_single" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center|start"
                            android:text="@string/user_height"
                            android:textSize="@dimen/text_large" />

                        <Button
                            android:id="@+id/height_choose"
                            style="@style/Widget.Material3.Button.TextButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="@dimen/card_single_spacing"
                            android:text="@string/choose"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_single" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exercise_goal"
                        android:textSize="@dimen/text_large" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checkedButton="@+id/enabled_selected"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/reduce_fat"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goal_reduce_fat" />

                        <RadioButton
                            android:id="@+id/maintain"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goal_maintain" />

                        <RadioButton
                            android:id="@+id/gain_muscle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/goal_gain_muscle" />

                    </RadioGroup>
                </LinearLayout>

                <TextView
                    android:id="@+id/alert_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/alert"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/save"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/card_single_spacing"
                    android:text="@string/save"
                    android:textColor="@color/white" />

            </LinearLayout>

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/register_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/card_double_spacing"
                android:indeterminate="true"
                android:visibility="gone" />

        </LinearLayout>
    </LinearLayout>
</layout>